--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <h1>パルデア地方の時刻計算</h1>
     <label for="paldeaTimeInput">パルデア地方の現在時刻 (HH:MM:SS):</label>
-<input type="time" id="paldeaTimeInput" step="1" value="00:00:00"> <!-- デフォルト値を設定 -->
+<input type="text" id="paldeaTimeInput" value="00:00:00"> <!-- テキスト形式に変更 -->
+
 <button id="calculateButton">計算</button>
 
     <!-- <label for="paldeaTimeInput">パルデア地方の現在時刻 (HH:MM:SS):</label>
