--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>パルデア時間計算</title>
-    <script src="script.js" defer></script>
+    <script src="script1.js" defer></script>
 </head>
 <body>
 
@@ -32,5 +32,7 @@
 
 	<h2>現在の時刻</h2>
     <p id="currentTimeDisplay"></p>
+    <h2>「計算」を押した時刻</h2>
+    <p id="initialTimeDisplay"></p>
 </body>
 </html>
