--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>パルデア時間計算</title>
-    <script src="script1.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
