--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@
 	  <input type="text" id="paldeaHoursInput"> 時<!-- 時間入力欄 -->
 	  <input type="text" id="paldeaMinutesInput"> 分 <!-- 分入力欄 -->
 	</div>
+    <button id="calculateButton">パルデア地方の現在時刻から計算</button>
+
+    <label for="systemHoursInput">本体時刻（秒は0）:</label>
+    <div class="time-inputs">
+<input type="text" id="systemHoursInput">時
+<label for="systemMinutesInput"></label>
+<input type="text" id="systemMinutesInput">分
+</div>
+<button id="systemTimeButton">本体時刻で計算</button>
+
 	
 
-<button id="calculateButton">計算</button>
+
 
 
 
